test/logs.txt
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:151:81: error: 'this' argument to member function 'minimum' has type 'const ft::set<int, std::__1::less<int>, std::__1::allocator<int> >', but function is not marked const
        const_iterator          begin()     const   {__INFOIT__ return iterator(this->minimum(this->_root), *this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:422:48: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::begin' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                               ^
../set_tests/../../../set.tpp:436:102: note: in instantiation of function template specialization 'ft::operator<<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:27: note: in instantiation of function template specialization 'ft::operator>=<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                 ^
../set_tests/../system/../../../red_black_tree.tpp:103:15: note: 'minimum' declared here
        Node* minimum(Node* node) {
              ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:155:81: error: 'this' argument to member function 'maximum' has type 'const ft::set<int, std::__1::less<int>, std::__1::allocator<int> >', but function is not marked const
        const_iterator          end()       const   {__INFOIT__ return iterator(this->maximum(this->_nul), *this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:422:61: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::end' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                                            ^
../set_tests/../../../set.tpp:436:102: note: in instantiation of function template specialization 'ft::operator<<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:27: note: in instantiation of function template specialization 'ft::operator>=<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                 ^
../set_tests/../system/../../../red_black_tree.tpp:96:15: note: 'maximum' declared here
        Node* maximum(Node* node) {
              ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:151:81: error: 'this' argument to member function 'minimum' has type 'const ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >', but function is not marked const
        const_iterator          begin()     const   {__INFOIT__ return iterator(this->minimum(this->_root), *this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:422:48: note: in instantiation of member function 'ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >::begin' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                               ^
../set_tests/../../../set.tpp:436:102: note: in instantiation of function template specialization 'ft::operator<<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:101: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                                                                                           ^
../set_tests/../system/../../../red_black_tree.tpp:103:15: note: 'minimum' declared here
        Node* minimum(Node* node) {
              ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:155:81: error: 'this' argument to member function 'maximum' has type 'const ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >', but function is not marked const
        const_iterator          end()       const   {__INFOIT__ return iterator(this->maximum(this->_nul), *this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:422:61: note: in instantiation of member function 'ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >::end' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                                            ^
../set_tests/../../../set.tpp:436:102: note: in instantiation of function template specialization 'ft::operator<<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:101: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                                                                                           ^
../set_tests/../system/../../../red_black_tree.tpp:96:15: note: 'maximum' declared here
        Node* maximum(Node* node) {
              ^
4 errors generated.
